force-app/main/default/objects/Centennial_Campaign__c/Centennial_Campaign__c.object-meta.xml
<CustomObject>
    <description>Object to capture high-level participation numbers as a result of the Centennial Campaign collaboration.</description>
    <label>Centennial Campaign</label>
    <nameField>
        <displayFormat>CCID - {00000000}</displayFormat>
        <label>CC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centennial Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>