force-app/main/default/objects/Centennial_Campaign__c/fields/Centennial_Campaign_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Centennial_Campaign_Reporting__c</fullName>
    <defaultValue>(&quot;Thank you for your participation in the Aquatics Centennial Campaign! This report should reflect the courses that ended in the reporting month. Reporting is due by the 5th day of the following month.&quot;)</defaultValue>
    <label>Centennial Campaign Reporting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>