force-app/main/default/objects/Centennial_Campaign__c/fields/Reporting_of_Total_Participation__c.field-meta.xml
<CustomField>
    <fullName>Reporting_of_Total_Participation__c</fullName>
    <defaultValue>(&quot;Please report the number of enrollees in each of the courses below. Be certain to include all enrollments that resulted directly from the Centennial Campaign (i.e., courses taught by WSIs trained through the Centennial, courses added to the schedule due to Centennial or for whom staff costs are reimbursed), for coupon codes used to waive AP fees or scholarships that were provided.&quot;)</defaultValue>
    <label>Reporting of Total Participation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>