force-app/main/default/objects/Centennial_Campaign__c/fields/SafetyTraining_for_Swim_Coaches__c.field-meta.xml
<CustomField>
    <fullName>SafetyTraining_for_Swim_Coaches__c</fullName>
    <label>SafetyTraining for Swim Coaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>